<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/blackborder">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_marginRight="@dimen/small_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/list_title_size"
                android:text="@string/name_test"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:background="@color/black"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/very_small_margin"/>

            <TextView
                android:id="@+id/tvOperational"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/list_text_size"
                android:text="@string/operational_test"/>

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/list_text_size"
                android:text="@string/location_test"/>

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/list_text_size"
                android:text="@string/phone_test"/>

            <TextView
                android:id="@+id/tvInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/list_text_size"
                android:text="@string/info_test"/>

        </LinearLayout>
        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:src="@drawable/thumbnail"/>
    </LinearLayout>
</LinearLayout>