<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_vertical_margin"
    android:background="@drawable/blackborder">

    <TextView
        android:id="@+id/tvNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/medicine_test"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="#0aa4d3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.3"
            android:textSize="@dimen/medicine_text_size"
            android:textColor="@color/black"
            android:text="@string/consume_per_day"/>

        <TextView
            android:id="@+id/tvConsume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/medicine_text_size"
            android:textColor="@color/black"
            android:text="@string/number_test"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="#0aa4d3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAlarm1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="@dimen/medicine_text_size"
            android:textColor="@color/black"
            android:text="@string/time_test"/>

        <TextView
            android:id="@+id/tvAlarm2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="@dimen/medicine_text_size"
            android:textColor="@color/black"
            android:text="@string/time_test"/>

        <TextView
            android:id="@+id/tvAlarm3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="@dimen/medicine_text_size"
            android:textColor="@color/black"
            android:text="@string/time_test"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAlarm4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="@dimen/medicine_text_size"
            android:textColor="@color/black"
            android:text="@string/time_test"/>

        <TextView
            android:id="@+id/tvAlarm5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="@dimen/medicine_text_size"
            android:textColor="@color/black"
            android:text="@string/time_test"/>

        <TextView
            android:id="@+id/tvAlarm6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="@dimen/medicine_text_size"
            android:textColor="@color/black"
            android:text="@string/time_test"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:background="#0aa4d3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="@dimen/medicine_text_size"
            android:textColor="@color/black"
            android:text="@string/date_test"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="@dimen/medicine_text_size"
            android:textColor="@color/black"
            android:text="until"/>

        <TextView
            android:id="@+id/tvEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:textSize="@dimen/medicine_text_size"
            android:textColor="@color/black"
            android:text="@string/date_test"/>
    </LinearLayout>
</LinearLayout>